- The Vault Entry UI changes

--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -3926,7 +3926,7 @@ Cg
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="vaultCell" rowHeight="65" id="GM8-Mm-Zz4" customClass="VaultTableViewCell" customModule="GP_App" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="vaultCell" rowHeight="65" id="GM8-Mm-Zz4" customClass="VaultTableViewCell" customModule="GP_App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="430" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GM8-Mm-Zz4" id="RZ1-uP-0JZ">
@@ -4260,6 +4260,7 @@ Cg
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="The Vault" id="ffe-b6-JtQ"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RHW-Bd-qSc">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
