--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -3563,7 +3563,59 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="474-rg-uK0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="207.90697674418604" y="-35.407725321888414"/>
+            <point key="canvasLocation" x="1106.5116279069766" y="-35.407725321888414"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="Swg-QZ-vxT">
+            <objects>
+                <tableViewController id="Y6K-3x-bm7" customClass="SettingsViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="OJK-Uy-mx0">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingsCell" id="C64-cg-CUW" customClass="SettingsViewCell" customModule="GP_App" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="430" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C64-cg-CUW" id="9vt-L2-1MF">
+                                    <rect key="frame" x="0.0" y="0.0" width="430" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xNx-St-tXC">
+                                            <rect key="frame" x="390" y="0.0" width="40" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lZp-pl-Q6j">
+                                            <rect key="frame" x="0.0" y="-43" width="40" height="128"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQQ-aX-hhO">
+                                            <rect key="frame" x="194" y="11" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="chevronImageView" destination="xNx-St-tXC" id="vIh-A7-nVd"/>
+                                    <outlet property="iconContainerView" destination="lZp-pl-Q6j" id="dXL-Jp-r98"/>
+                                    <outlet property="iconImageView" destination="lZp-pl-Q6j" id="YCE-9g-1So"/>
+                                    <outlet property="titleLabel" destination="hQQ-aX-hhO" id="11b-bR-N65"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Y6K-3x-bm7" id="oiU-8C-6aT"/>
+                            <outlet property="delegate" destination="Y6K-3x-bm7" id="nQs-9o-t7G"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="rXI-wG-vod"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rjj-jS-amc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-498.1395348837209" y="-35.407725321888414"/>
         </scene>
         <!--Settings-->
         <scene sceneID="1FX-DH-2jt">
@@ -3588,7 +3640,7 @@ Cg
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m0X-ye-S3N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-670" y="-35"/>
+            <point key="canvasLocation" x="227.44186046511626" y="-35.407725321888414"/>
         </scene>
         <!--About us-->
         <scene sceneID="ygS-mv-yU3">
@@ -3714,7 +3766,7 @@ Cg
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                                 <connections>
-                                                    <segue destination="elf-L2-4MU" kind="show" id="mT0-uJ-MR9"/>
+                                                    <segue destination="9C0-ff-mc2" kind="show" id="Zqh-0w-UZY"/>
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" layoutMarginsFollowReadableWidth="YES" image="Thumb5" id="ByK-o6-m0z">
@@ -3749,7 +3801,7 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z7Q-g4-LMQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1050.6976744186047" y="-35.407725321888414"/>
+            <point key="canvasLocation" x="1949.3023255813953" y="-35.407725321888414"/>
         </scene>
         <!--Portfolio-->
         <scene sceneID="Uzw-Sl-sqV">
@@ -3777,7 +3829,7 @@ Cg
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPR-g2-vOd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1888" y="-35"/>
+            <point key="canvasLocation" x="2786.5116279069766" y="-35.407725321888414"/>
         </scene>
         <!--Featured-->
         <scene sceneID="zsq-24-lUd">
@@ -4466,6 +4518,24 @@ Cg
             </objects>
             <point key="canvasLocation" x="2682" y="3491"/>
         </scene>
+        <!--Settings-->
+        <scene sceneID="Lbl-YN-XOP">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="9C0-ff-mc2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Settings" id="nTS-Pi-Eum"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EqP-0G-lfE">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Y6K-3x-bm7" kind="relationship" relationship="viewControllers" id="Xko-uP-dWp"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pwp-Eo-NFV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1396.7441860465117" y="-35.407725321888414"/>
+        </scene>
     </scenes>
     <resources>
         <image name="AppBackground2" width="2048" height="2732"/>
@@ -4485,6 +4555,7 @@ Cg
         <image name="envelope.fill" catalog="system" width="128" height="93"/>
         <image name="face.smiling" catalog="system" width="128" height="123"/>
         <image name="gamecontroller.fill" catalog="system" width="128" height="79"/>
+        <image name="gear" catalog="system" width="128" height="122"/>
         <image name="hand.raised.circle.fill" catalog="system" width="128" height="123"/>
         <image name="info.circle.fill" catalog="system" width="128" height="123"/>
         <image name="iphone" catalog="system" width="112" height="128"/>
